welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: error: ';' expected but 'else' found.
  } else {
    ^SnakeBuggle:16: error: Unmatched closing brace '}' ignored here
}
^